# dawn

./: .gitignore  AGENTS.md  BRAND_GUIDE.md  Cargo.toml  clippy.toml  package.json  pnpm-lock.yaml
apps/desktop/: Cargo.toml  package.json  tauri.conf.json  vite.config.ts
apps/desktop/capabilities/: default.json
apps/desktop/frontend/: eslint.config.js  index.html  knip.json  package.json  tailwind.config.ts  tsconfig.json
apps/desktop/frontend/src/: api.ts  bindings.ts  commandRegistry.ts  main.tsx  previewTransport.ts  store.ts  styles.css  uiEvents.ts  vendor.d.ts
apps/desktop/frontend/src/ui/: App.tsx  EditorPane.tsx  GuiEditor.tsx  PreviewWindow.tsx  ProjectTree.tsx  StatusBar.tsx  TitleBar.tsx
apps/desktop/src/: ErrorBoundary.tsx  WorkbenchShell.tsx  actions.rs  app_model.rs  audio_runtime.rs  editor_session.rs  layout_persistence.rs  lib.rs  main.rs  main.tsx  output_runtime.rs  preview_transport.rs  styles.css  types.ts  workspace.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: export_bindings.rs  lib.rs  main.rs
apps/desktop/src/language/: DawnEditorRuntime.ts  dawnLanguage.ts  dawnLanguageClient.ts
apps/desktop/src/panels/: FixtureViewer.tsx  LayoutPanel.tsx  LayoutViewer.tsx  OutputPanel.tsx  PreviewPanel.tsx  ProblemsPanel.tsx  ProjectPanel.tsx  SourceEditorPanel.tsx  geometryRender.tsx
apps/desktop/src/store/: workbenchStore.ts
apps/desktop/src/ui/: components.rs  dawn_syntax.rs  diagnostics.rs  dropdown_menu.rs  editor.rs  fixture_viewer.rs  fonts.rs  geometry.rs  layout_viewer.rs  mod.rs  preview.rs  preview_window.rs  project_tree.rs  shell.rs  theme.rs  workbench.rs
apps/desktop/src/ui/components/: canvas.rs  dropdown_menu.rs  mod.rs  modal.rs  primitives.rs
apps/desktop/src/ui/editor/: mod.rs
apps/desktop/src/ui/editor/gui/: fixture.rs  layout.rs  mod.rs  sequence.rs
apps/desktop/src/ui/inspector/: diagnostics.rs  mod.rs  preview.rs
apps/desktop/src/ui/project_tree/: mod.rs
apps/desktop/src/ui/window/: mod.rs
apps/desktop/src/ui/workbench/: mod.rs
apps/desktop/src/workbench/: DockChrome.tsx  DockLayout.tsx  dockBridge.ts  panelIds.ts  persistence.ts  registry.tsx
crates/dawn-analysis/: Cargo.toml
crates/dawn-analysis/src/: lib.rs
crates/dawn-app-core/: Cargo.toml
crates/dawn-app-core/src/: actions.rs  app_model.rs  dto.rs  editor_session.rs  layout_persistence.rs  lib.rs  output_runtime.rs  preview_session.rs  workspace.rs
crates/dawn-cli/: Cargo.toml
crates/dawn-cli/src/: main.rs
crates/dawn-core/: Cargo.toml
crates/dawn-core/bindings/: AnalysisFeatures.ts  AnalysisProvenance.ts  AnnotationLayer.ts  AudioUnderstanding.ts  BeatGridRaw.ts  BuiltInEffect.ts  ChordEvent.ts  ClipId.ts  ControllerProtocol.ts  CurveMarkKind.ts  CurveTrack.ts  DescriptorWindow.ts  DrumEventsRaw.ts  E131UniverseSize.ts  EffectId.ts  EffectKind.ts  EventTrack.ts  FixtureDef.ts  Frame.ts  HarmonyAnalysis.ts  LayerOrigin.ts  LowLevelRaw.ts  LyricsRaw.ts  MarkDomain.ts  MarkTimeline.ts  MarkTrack.ts  ModelRunInfo.ts  MoodAnalysis.ts  MusicalRole.ts  NodeTimeline.ts  ParamKey.ts  Patch.ts  PhraseSpan.ts  PitchRaw.ts  PixelType.ts  PointMark.ts  SalienceTrack.ts  SectionLabelSpan.ts  SemanticRaw.ts  SpanMark.ts  (+8 more)
crates/dawn-core/src/: lib.rs  registry.rs  util.rs
crates/dawn-lang/: Cargo.toml
crates/dawn-lang/src/: lib.rs  project.rs
crates/dawn-lsp/: Cargo.toml
crates/dawn-lsp/src/: lib.rs  main.rs
crates/dawn-project/: Cargo.toml
crates/dawn-project/src/: analysis.rs  document.rs  effect_script.rs  fs.rs  lib.rs  load.rs  lower.rs  model.rs  parse.rs  path.rs  render.rs
crates/dawn-project/tests/: analysis.rs
crates/dawn-semantics/: Cargo.toml
crates/dawn-semantics/src/: lib.rs
crates/dawn-syntax/: Cargo.toml
crates/dawn-syntax-gen/: Cargo.toml
crates/dawn-syntax-gen/src/: main.rs  spec.rs
crates/dawn-syntax/src/: diagnostic.rs  lib.rs
crates/donder-cli/: Cargo.toml
crates/donder-cli/src/: main.rs
crates/donder-core/: Cargo.toml
crates/donder-core/bindings/: AnalysisDocument.ts  AnalysisFeatureKind.ts  AutomationClip.ts  BulbShape.ts  ChannelOrder.ts  DrumAnalysis.ts  DslBuiltins.ts  EffectInstance.ts  EmbeddingTrack.ts  EventHit.ts  FrameFixtureSpan.ts  MarkSource.ts  NamedStem.ts  NodeId.ts  NoteSpan.ts  OutputMapping.ts  ParamValue.ts  PointMarkKind.ts  PythonEnvStatus.ts  RawAnalysisBundle.ts  Sequence.ts  SongAnnotations.ts  SpanMarkKind.ts  StructureRaw.ts  UnderstandingHypothesis.ts  UnderstandingHypothesisKind.ts  UserEditRecord.ts
crates/donder-core/src/: registry.rs
crates/donder-lang/: Cargo.toml
crates/donder-lang/src/: lib.rs  project.rs
crates/donder-project/: Cargo.toml
crates/donder-project/src/: lib.rs
crates/syntax-gen/: Cargo.toml
crates/syntax-gen/src/: main.rs  semantics.rs  spec.rs
docs/: dawn-language-grammar.md  dawn-language-spec.md  fix_log.md  syntax-generation-plan.md
examples/christmas-house/: project.dawn
examples/christmas-house/displays/: main.display.dawn
examples/christmas-house/effects/: candy-cane.effect.dawn  curve-gradient.effect.dawn  (+2 more)
examples/club-rig/: README.md  project.dawn
examples/lsp-smoke/: broken.effect.dawn
grammar/: dawn.syntax.ron
grammar/dawn/: README.md  ast.ron  diagnostics.ron  grammar.ron  precedence.ron  syntax.ron  tokens.ron
sample-project/: project.dawn  project.donder
sample-project/curves/: Gate.curve.dawn  PulseEnvelope.curve.dawn  StrobeRate.curve.dawn  SunsetPalette.curve.dawn
sample-project/displays/: Main.display.dawn  Main.display.donder  controllers.dawn  layout.dawn  patch.donder
sample-project/effects/: Pulse.effect.dawn  Pulse.effect.donder  Strobe.effect.dawn
sample-project/hardware/: StageHardware.hardware.dawn
sample-project/layouts/: StageLayout.layout.dawn
sample-project/patches/: StagePatch.patch.dawn
sample-project/sequences/: Demo.sequence.dawn  Demo.sequence.donder
scripts/: dawn-lsp.cmd
spec/: README.md  builtins.ron  semantics.ron  syntax.ron
tools/: check-ui-theme.ps1
(+76 files in other folders)
