[workspace]
members = [
  "apps/desktop",
  "crates/dawn-project",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
camino = { version = "1", features = ["serde1"] }
dirs = "6"
floem = { version = "=0.2.0", features = ["rfd-async-std"] }
indexmap = { version = "2", features = ["serde"] }
pathdiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
