[package]
name = "dawn-desktop"
edition.workspace = true
version.workspace = true
description = "Dawn desktop IDE"
authors = ["Dawn"]
license = "MIT"
default-run = "dawn-desktop"

[dependencies]
camino.workspace = true
dawn-app-core = { path = "../../crates/dawn-app-core" }
dawn-project = { path = "../../crates/dawn-project" }
rfd = "0.15"
serde.workspace = true
serde_json.workspace = true
specta = { version = "2.0.0-rc.25", features = ["derive", "serde_json"] }
specta-typescript = "0.0.12"
tauri = { version = "2", features = [] }
tauri-specta = { version = "2.0.0-rc.25", features = ["typescript"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.2"
windows-core = "0.61.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "dawn-desktop"
path = "src/main.rs"

[[bin]]
name = "generate-bindings"
path = "src/bin/generate_bindings.rs"
