[package]
name = "dawn-lsp"
edition.workspace = true
version.workspace = true

[dependencies]
dawn-analysis = { path = "../dawn-analysis" }
dawn-syntax = { path = "../dawn-syntax" }
rowan.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
