[package]
name = "donder-project"
edition.workspace = true
version.workspace = true

[dependencies]
donder-core.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
