[package]
name = "dawn-desktop"
edition.workspace = true
version.workspace = true
description = "Dawn desktop IDE"
authors = ["Dawn"]
license = "MIT"

[lib]
name = "dawn_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dawn-desktop"
path = "src/main.rs"

[dependencies]
dawn-project.workspace = true
serde.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
walkdir.workspace = true

[build-dependencies]
tauri-build.workspace = true
