[package]
name = "dawn-desktop"
edition.workspace = true
version.workspace = true
description = "Dawn desktop IDE"
authors = ["Dawn"]
license = "MIT"

[lib]
name = "dawn_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dawn-desktop"
path = "src/main.rs"

[dependencies]
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
walkdir.workspace = true

[build-dependencies]
tauri-build.workspace = true
